exports[`Pagination renders correctly 1`] = `
"html
  body
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li.uk-active
        span 1
      li
        a 2
      li
        a 3
      li
        a 4
      li
        a 5
      li
        a 6
      li
        a 7
      li
        span ...
      li
        a 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
"
`;

exports[`Pagination renders correctly 2`] = `
"html
  body
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li.uk-active
        span 1
      li
        a 2
      li
        a 3
      li
        a 4
      li
        a 5
      li
        a 6
      li
        a 7
      li
        span ...
      li
        a 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a 1
      li
        span ...
      li
        a 7
      li
        a 8
      li
        a 9
      li.uk-active
        span 10
      li
        a 11
      li
        a 12
      li
        a 13
      li
        span ...
      li
        a 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
"
`;

exports[`Pagination renders correctly 3`] = `
"html
  body
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li.uk-active
        span 1
      li
        a 2
      li
        a 3
      li
        a 4
      li
        a 5
      li
        a 6
      li
        a 7
      li
        span ...
      li
        a 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a 1
      li
        span ...
      li
        a 7
      li
        a 8
      li
        a 9
      li.uk-active
        span 10
      li
        a 11
      li
        a 12
      li
        a 13
      li
        span ...
      li
        a 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a 1
      li
        span ...
      li
        a 14
      li
        a 15
      li
        a 16
      li
        a 17
      li
        a 18
      li
        a 19
      li.uk-active
        span 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
"
`;

exports[`Pagination renders correctly 4`] = `
"html
  body
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li.uk-active
        span 1
      li
        a 2
      li
        a 3
      li
        a 4
      li
        a 5
      li
        a 6
      li
        a 7
      li
        span ...
      li
        a 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a 1
      li
        span ...
      li
        a 7
      li
        a 8
      li
        a 9
      li.uk-active
        span 10
      li
        a 11
      li
        a 12
      li
        a 13
      li
        span ...
      li
        a 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a 1
      li
        span ...
      li
        a 14
      li
        a 15
      li
        a 16
      li
        a 17
      li
        a 18
      li
        a 19
      li.uk-active
        span 20
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
    ul.uk-pagination
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-prev.uk-icon(uk-pagination-previous=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
      |  
      li
        a
          span.uk-pagination-next.uk-icon(uk-pagination-next=\'true\')
"
`;
